--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "multer": "^1.3.0",
     "pg": "^7.4.1",
     "truffle-contract": "^3.0.4",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.33"
   },
   "devDependencies": {},
