--- a/docker/package.json
+++ b/docker/package.json
@@ -2,12 +2,13 @@
   "name": "picolo",
   "version": "1.0.0",
   "description": "",
-  "main": "",
+  "main": "run.js",
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "forever": "^0.15.3",
     "multer": "^1.3.0",
     "pg": "^7.4.1",
     "truffle-contract": "^3.0.4",
